# Copyright (c) 2023-2024 Antmicro <www.antmicro.com>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "topwrap"
version = "0.0.1"
requires-python = ">=3.9"
authors = [{name = "Antmicro"}]
description = "Package for generating HDL wrappers and top modules for your HDL sources"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML",
  "click",
  "amaranth==0.4.0.*",
  "marshmallow_dataclass",
  "simpleeval",
  "typing_extensions",
  "marshmallow-dataclass[enum]",
  "pygtrie",
  "pipeline_manager_backend_communication @ git+https://github.com/antmicro/kenning-pipeline-manager-backend-communication@eb690cfb7766bfbd85a4eff2a1e809573b8b72d0",
  "pipeline_manager @ git+https://github.com/antmicro/kenning-pipeline-manager@f45289d7073e885b5e3f461db9a8667807b69380",
  "soc_generator @ git+https://github.com/antmicro/soc-generator@4141f5c5720c9355d859d6098523173bdc306916",
]

[project.optional-dependencies]
topwrap-parse = [
  "hdlConvertor @ git+https://github.com/Nic30/hdlConvertor@fae60effdb16574de152bf9bf7bc2e225b729797",
]
lint = [
  "nox==2024.10.09",
  "flake8==7.1.1",
  "pre-commit==3.5.0",
  "black==24.10.0",
  "isort==5.13.2",
  "codespell==2.3.0",
]
tests = [
  "nox==2024.10.09",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-lazy-fixtures==1.1.1",
  "pyfakefs==5.7.1",
  "deepdiff==8.0.1",
  "pyright==1.1.385",
  "prettytable==3.11.0",
]
deploy = [
  "build==1.2.1"
]
docs = [
  'myst-parser==4.0.0',
  'sphinx==7.3.7',
  'sphinxcontrib-mermaid==0.9.2',
  'sphinx-immaterial @ https://github.com/antmicro/sphinx-immaterial/releases/download/tip/sphinx_immaterial-0.0.post1.tip-py3-none-any.whl',  # noqa: E501
  'sphinx_tabs==3.4.5',
  'antmicro-sphinx-utils @ git+https://github.com/antmicro/antmicro-sphinx-utils@f5873e116c40a3b6087e49ccad7db3497402ee81'
]

[project.scripts]
topwrap = "topwrap.cli:main"

[tool.setuptools.packages.find]
include = ["topwrap*"]

[tool.setuptools.package-data]
topwrap = [
  "interfaces/*",
  "ips/**/*",
  "templates/*"
]

[tool.black]
line-length = 100
exclude = '''
(
  /(
    | \.eggs
    | \.git
    | \.gitignore
    | \.nox
    | \.pytest_cache
    | __pycache__
    | venv
    | build
    | workspace
  )/
)
'''
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [
    ".eggs",
    ".git",
    ".gitignore",
    ".nox",
    ".pytest_cache",
    "__pycache__",
    "venv",
    "build",
    "workspace",
]

[tool.codespell]
skip = "build,venv,cov_html,./tests/data,.git,.nox,__pycache__,workspace"
ignore-words-list = "convertor, inout, inouts"

[tool.pyright]
include = ["topwrap"]
reportMissingImports = false
typeCheckingMode = "standard"
reportMissingTypeArgument = true
reportMissingParameterType = true
